WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106207
Cannot compile with ENABLE_SHADOW_DOM=0 and ENABLE_STYLE_SCOPED=1
https://bugs.webkit.org/show_bug.cgi?id=106207
Summary
Cannot compile with ENABLE_SHADOW_DOM=0 and ENABLE_STYLE_SCOPED=1
Hayato Ito
Reported
2013-01-06 21:10:13 PST
Build log. ../../third_party/WebKit/Source/WebCore/css/StyleScopeResolver.cpp: In member function 'void WebCore::StyleScopeResolver::addHostRule(WebCore::StyleRuleHost*, bool, const WebCore::ContainerNode*)': ../../third_party/WebKit/Source/WebCore/css/StyleScopeResolver.cpp:185:64: error: invalid use of incomplete type 'struct WebCore::StyleRuleHost' ../../third_party/WebKit/Source/WebCore/css/StyleScopeResolver.h:43:7: error: forward declaration of 'struct WebCore::StyleRuleHost'
Attachments
Add a guard.
(1.71 KB, patch)
2013-01-06 23:41 PST
,
Hayato Ito
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hayato Ito
Comment 1
2013-01-06 23:41:37 PST
Created
attachment 181480
[details]
Add a guard.
WebKit Review Bot
Comment 2
2013-01-07 01:08:22 PST
Comment on
attachment 181480
[details]
Add a guard. Clearing flags on attachment: 181480 Committed
r138929
: <
http://trac.webkit.org/changeset/138929
>
WebKit Review Bot
Comment 3
2013-01-07 01:08:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug