Cannot compile with ENABLE_SHADOW_DOM=0 and ENABLE_STYLE_SCOPED=1 https://bugs.webkit.org/show_bug.cgi?id=106207

Reviewed by Hajime Morita.

Guard StyleScopeResolver::addHostRule with SHADOW_DOM flag.

No tests, as no change in behavior.

* css/StyleScopeResolver.cpp:
(WebCore):


git-svn-id: svn://svn.chromium.org/blink/trunk@138929 bbb929c8-8fbe-4397-9dbb-9b2b20218538